syntax = "proto3";
option go_package="proto.region";

service RegionService {
  rpc Create(CreateRegionRequest) returns (RegionProfileResponse);
  rpc Read(SingleRegionRequest) returns (RegionProfileResponse);
  rpc Update(UpdateRegionRequest) returns (SuccessResponse);
  rpc Delete(SingleRegionRequest) returns (SuccessResponse);
}

message CreateRegionRequest{
  int64 code = 1;
  string name = 2;
  int64 country_id = 3;
  string activation_date = 4;
  string deactivation_date = 5;
  string old_name = 6;
}

message SingleRegionRequest{
  int64 id = 1;
}

message RegionProfileResponse{
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  int64 country_id = 4;
  string activation_date = 5;
  string deactivation_date = 6;
  string old_name = 7;
}

message SuccessResponse{
  string response = 1;
}


message UpdateRegionRequest{
  int64 id = 1;
  int64 code = 2;
  string name = 3;
  int64 country_id = 4;
  string activation_date = 5;
  string deactivation_date = 6;
  string old_name = 7;
}

/*
protoc \
--proto_path=proto/region \
--go_out=proto/region \
--go_opt=paths=source_relative proto/region/region.proto \
--go-grpc_out=proto/region \
--go-grpc_opt=paths=source_relative proto/region/region.proto
*/